--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -46,7 +46,7 @@ nav .navLinks {
     display: flex;
     justify-content: start;
     column-gap: 2rem;
-    z-index: 2;
+    z-index: 4;
     margin-right: 2rem;
 }
 
@@ -105,6 +105,7 @@ nav a {
     text-decoration: none;
     font-size: 1.3rem;
     font-weight: 600;
+    z-index: 4;
 }
 
 .hMenu {
