--- a/src/skills/skills.css
+++ b/src/skills/skills.css
@@ -4,6 +4,7 @@
     justify-items: center;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 
 .iconImage {
